Remove mvnw files