@@ -36,14 +36,6 @@ fi;
 echo "Jlink found on \"$jlink_bin\" path.";
 echo "The following modules will be added on Java runtime: $add_modules_value";
 
-echo "$jlink_bin" \
-  --add-modules "$add_modules_value" \
-  --strip-java-debug-attributes \
-  --no-man-pages \
-  --no-header-files \
-  --compress=2 \
-  --output /tmp/java-runtime;
-
 "$jlink_bin" \
   --add-modules "$add_modules_value" \
   --strip-java-debug-attributes \
